fix: update hover div background and text color for better visibility

--- a/index.css
+++ b/index.css
@@ -69,7 +69,8 @@ div.colorchange{
 
 div.hover{
     display: flex;
-    background-color: white;
+    background-color: grey;
+    color: orange;
     width: 100px;
     height: 100px;
     border: 3px solid black;
